--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     font-size: 230px;
     font-family: fantasy, 'Agency FB', Arial, Helvetica, sans-serif;
     color: #ffffff;
+    cursor: pointer;
 }
 
 @media (max-width: 480px) {
